# TC1-Rede-Neural-para-Previsao-de-Churn-com-Pipeline-Profissional-End-to-End

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  mega_sena_analysis.py  pyproject.toml
data/: data.ipynb
docs/: ml_canvas.md  model_card.md
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp.ipynb  etp1_canvas.ipynb
src/api/: app.py
src/data/: loader.py
src/evaluation/: metrics.py
src/models/: mlp.py  train.py
tests/: conftest.py  test_api.py  test_models.py  test_schema.py  test_smoke.py
