[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "tc1-churn-prediction"
version = "0.1.0"
description = "Rede neural end-to-end para previsão de churn em telecomunicações — FIAP Pós-Tech MLOps TC1"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Rafael Fernando Gimenes", email = "rafael.gimenes17@gmail.com" },
]
keywords = ["churn", "mlops", "pytorch", "mlflow", "classification"]

# ---------------------------------------------------------------------------
# Runtime dependencies (produção mínima)
# ---------------------------------------------------------------------------
dependencies = [
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0,<3.0",
    "scikit-learn>=1.3.0,<2.0",
    "torch>=2.1.0",
    "mlflow>=2.10.0",
    "pandera>=0.18.0",
]

# ---------------------------------------------------------------------------
# Optional dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]

# Visualização — EDA e relatórios
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
]

# Notebooks
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "tc1-churn-prediction[viz]",
]

# API de inferência
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
]

# Qualidade de código e testes
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "tc1-churn-prediction[viz,notebooks]",
]

# Tudo junto (desenvolvimento completo)
all = [
    "tc1-churn-prediction[viz,notebooks,api,dev]",
]

# ---------------------------------------------------------------------------
# Package discovery
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=60",
]
markers = [
    "unit: testes unitários isolados",
    "integration: testes de integração (requerem dados reais)",
    "slow: testes lentos (treinamento de modelos)",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatação
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # linha longa (ruff format já cuida)
    "B008",  # chamada de função em defaults (FastAPI patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — verificação estática de tipos
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # tolerante a libs sem stubs (torch, mlflow)
exclude = ["notebooks/", "tests/"]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
